--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,15 @@ apply plugin: "com.facebook.react"
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
+configurations.all {
+    resolutionStrategy {
+        eachDependency {
+            if ((requested.group == "org.jetbrains.kotlin") && (requested.name.startsWith("kotlin-stdlib"))) {
+                useVersion("1.7.10")
+            }
+        }
+    }
+}
 react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
@@ -86,6 +95,10 @@ android {
         pickFirst 'lib/x86_64/libcrypto.so'
         pickFirst 'lib/armeabi-v7a/libcrypto.so'
         pickFirst 'lib/arm64-v8a/libcrypto.so'
+        pickFirst 'lib/x86/liblog.so'
+        pickFirst 'lib/x86_64/liblog.so'
+        pickFirst 'lib/armeabi-v7a/liblog.so'
+        pickFirst 'lib/arm64-v8a/liblog.so'
     }
     signingConfigs {
         debug {
