--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc.hce" android:required="true" />
 
     <application
       android:name=".MainApplication"
@@ -26,6 +28,25 @@
               <category android:name="android.intent.category.BROWSABLE" />
               <data android:scheme="rnstarter" />
           </intent-filter>
+          <intent-filter>
+            <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <data android:mimeType="text/plain" />
+        </intent-filter>
       </activity>
+      <service
+        android:name="com.reactnativehce.services.CardService"
+        android:exported="true"
+        android:enabled="false"
+        android:permission="android.permission.BIND_NFC_SERVICE" >
+        <intent-filter>
+          <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
+          <category android:name="android.intent.category.DEFAULT"/>
+        </intent-filter>
+
+        <meta-data
+          android:name="android.nfc.cardemulation.host_apdu_service"
+          android:resource="@xml/aid_list" />
+      </service>
     </application>
 </manifest>
