--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
@@ -9,7 +8,7 @@ buildscript {
 
         androidXAnnotation = "1.2.0"
         androidXBrowser = "1.3.0"
-
+        kotlinVersion = "1.7.10"
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
