--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
     "@react-native-community/netinfo": "^9.4.1",
     "@thirdweb-dev/react-native": "^0.3",
     "@thirdweb-dev/react-native-compat": "^0.3",
+    "amazon-cognito-identity-js": "^6.3.3",
     "ethers": "^5",
     "expo": "^49.0.3",
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-aes-gcm-crypto": "^0.2.2",
     "react-native-crypto": "^2.2.0",
     "react-native-get-random-values": "^1.9.0",
+    "react-native-hce": "^0.2.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-mmkv": "^2.8.0",
+    "react-native-nfc-manager": "^3.14.8",
+    "react-native-nfc-sdk": "^0.3.4-beta",
+    "react-native-quick-base64": "^2.0.7",
+    "react-native-quick-crypto": "^0.6.1",
     "react-native-randombytes": "^3.6.1",
     "react-native-svg": "^13.9.0"
   },
